<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Login"
    android:background="@drawable/vendor_login"
    tools:context=".UserLoginActivity">


    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        >
    </TextView>
    <TextView
        android:id="@+id/txtBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_upwork"
        android:layout_below="@id/txtWelcome"
        android:textSize="38sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="1dp"
        android:layout_marginStart="30dp"
        >
    </TextView>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/vendor"
        android:id="@+id/imgVendor"
        android:layout_marginTop="77dp"
        android:layout_marginLeft="173dp"
        android:layout_below="@id/txtBack"
        >
    </ImageView>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgVendor"
        android:hint="Enter your email"
        android:inputType="text"
        android:layout_marginTop="75dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="#000000"
        android:padding="6dp"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>
    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_id"
        android:inputType="text"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:maxLength="25"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:layout_below="@id/etId"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:maxLength="25"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPassword"
        android:layout_below="@id/etPassword"
        android:layout_marginStart="235dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="@color/button_color"
        >

    </TextView>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/forgotPassword"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:background="@drawable/round_blue_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        >
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtOr"
        android:layout_below="@id/loginButton"
        android:text="@string/or"
        android:textSize="20sp"
        android:layout_marginStart="186dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/button_color"
        >

    </TextView>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtOr"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:background="@drawable/round_blue_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        >
    </Button>

</RelativeLayout>