<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.registration"
    android:background="@drawable/vendor_registration"
    tools:context=".UserRegistrationActivity">

    <TextView
        android:id="@+id/txtStartYour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Offer. Earn."
        android:textSize="40sp"
        android:textColor="#005DFE"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_marginStart="120dp"
        >
    </TextView>
    <TextView
        android:id="@+id/txtJourney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Build."
        android:layout_below="@id/txtStartYour"
        android:textSize="38sp"
        android:textColor="#005DFE"
        android:textStyle="bold"
        android:layout_marginTop="1dp"
        android:layout_marginStart="160dp"
        >

    </TextView>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/vendor"
        android:id="@+id/imgVendor"
        android:layout_marginTop="167dp"
        android:layout_marginLeft="176dp"
        android:layout_below="@id/txtBack"
        >
    </ImageView>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your full name"
        android:inputType="text"
        android:layout_below="@id/imgVendor"
        android:layout_marginTop="85dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:textColor="@color/white"
        android:maxLength="25"
        android:textColorHint="@color/white"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>
    <EditText
        android:id="@+id/etCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your company name"
        android:inputType="text"
        android:layout_below="@id/etName"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:textColorHint="@color/white"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email"
        android:inputType="text"
        android:layout_below="@id/etCompany"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:padding="6dp"
        android:textColorHint="@color/white"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Set password"
        android:inputType="textPassword"
        android:layout_below="@id/etEmail"
        android:textColorHint="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:maxLength="12"
        android:maxLines="1"
        android:autofillHints="Enter">
    </EditText>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/etPassword"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:background="@drawable/rounded_white_btn"
        android:textStyle="bold"
        android:textColor="#005DFE"
        >
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtOr"
        android:layout_below="@id/signupButton"
        android:text="@string/or"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="186dp"
        android:layout_marginTop="10dp"
        >

    </TextView>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtOr"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:background="@drawable/rounded_white_btn"
        android:textStyle="bold"
        android:textColor="#005DFE"
        >
    </Button>

</RelativeLayout>